# memorymap-toolkit-motm

./: .dockerignore  .env.template  .gitignore  Dockerfile  docker-compose.yml  mmt_setup.py  requirements.txt  welcome.htm
data/: README.md
memorymap_toolkit/: context_processors.py
memorymap_toolkit/settings/: base.py  secret_settings_template.py
mmt_motm/: admin.py  apps.py  models.py
mmt_motm/importers/: README.md  db_import.py  xlsx_person_reader.py
mmt_motm/migrations/: 0001_initial.py  0002_alter_person_identifier.py  0003_auto_20260509_1518.py  0004_auto_20260515_1357.py
notebook/: README.md  chronotopi.ipynb  events.py  location_enrich.ipynb  locations.py  locations.xlsx  mqda-parse.ipynb  pyproject.toml  qdpx-parse.ipynb  timespan.py  util.py
project_static/js/: pageHandler.js
