[project]
name = "notebook"
version = "0.1.0"
description = "Preprocessing tools for Minors on the Move/Memory Mapper"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.3",
    "qdpxlib>=0.1.4",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "pytest>=9.0.3",
    "regex>=2026.4.4",
    "tqdm>=4.67.3",
    "jupyterlab>=4.5.6",
    "pandasql>=0.7.3",
    "sqlalchemy>=2.0.49",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
